--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
 <body>
 	<div class = "title">
 	<h1 class = "daimei">プログラム復習コンテンツ</h1>
+	<a href='https://o-saringu.github.io/mokuji/'>
 	<div class="home"></div>
+	</a>
 	</div>
 
 	<h1 class = "daimei2">第5章反応　STEP1-初級問題</h1>
@@ -68,9 +70,29 @@
 	<p>(3)ellipse(mouseX, mouseY, 10, 10);</p>
 	
 	<input type="button" id="btn" value="判定">
-	
+
+	<input type="button"  id="btn2" onclick="location.href='https://o-saringu.github.io/3-1_jyoukyuu/'"value="次の問題へ">
 	
 	</div>
+
+	<p class="midasi3">解説欄</p>
+	<div class = "mondaibun">
+	<input type="checkbox" id="check2">
+	<label class="check2" for="check2">解説</label>
+	<div class = "kaisetu">
+	<p><a href="https://o-saringu.github.io/size/"target="_blank" rel="noopener noreferrer" >size()関数</a>
+	<p><a href="https://o-saringu.github.io/setup/"target="_blank" rel="noopener noreferrer" >setup()関数</a>
+	<p><a href="https://o-saringu.github.io/draw/"target="_blank" rel="noopener noreferrer" >draw()関数</a>
+	<p><a href="https://o-saringu.github.io/stroke/"target="_blank" rel="noopener noreferrer" >noStroke()関数</a>
+	<p><a href="https://o-saringu.github.io/fill/"target="_blank" rel="noopener noreferrer" >fill()関数</a>
+	<p><a href="https://o-saringu.github.io/ellipse/"target="_blank" rel="noopener noreferrer" >ellipse()関数</a>
+	<p><a href="https://o-saringu.github.io/5-3/"target="_blank" rel="noopener noreferrer" >mouseX,mouseY変数</a>
+	
+	
+
+	</div>
+
+	
 	<script src = "main.js"></script>	
 </body>
 
