--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 	
 	<input type="button" id="btn" value="判定">
 
-	<input type="button"  id="btn2" onclick="location.href='https://o-saringu.github.io/3-1_jyoukyuu/'"value="次の問題へ">
+	<input type="button"  id="btn2" onclick="location.href='https://o-saringu.github.io/5-1_tyuukyuu/'"value="次の問題へ">
 	
 	</div>
 
