--- a/index.html
+++ b/index.html
@@ -81,8 +81,8 @@
 	<label class="check2" for="check2">解説</label>
 	<div class = "kaisetu">
 	<p><a href="https://o-saringu.github.io/size/"target="_blank" rel="noopener noreferrer" >size()関数</a>
-	<p><a href="https://o-saringu.github.io/setup/"target="_blank" rel="noopener noreferrer" >setup()関数</a>
-	<p><a href="https://o-saringu.github.io/draw/"target="_blank" rel="noopener noreferrer" >draw()関数</a>
+	<p><a href="https://o-saringu.github.io/5-2/"target="_blank" rel="noopener noreferrer" >setup()関数</a>
+	<p><a href="https://o-saringu.github.io/5-1/"target="_blank" rel="noopener noreferrer" >draw()関数</a>
 	<p><a href="https://o-saringu.github.io/stroke/"target="_blank" rel="noopener noreferrer" >noStroke()関数</a>
 	<p><a href="https://o-saringu.github.io/fill/"target="_blank" rel="noopener noreferrer" >fill()関数</a>
 	<p><a href="https://o-saringu.github.io/ellipse/"target="_blank" rel="noopener noreferrer" >ellipse()関数</a>
