--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 	<div class = "gamen">
 	<p class="midasi2">プログラム実行画面</p>
 	<div class = "video">
-	<video controls muted autoplay loop src="5syou_1_syokyuu_kekka.mp4"></video>
+	<video class="vid" controls muted autoplay loop src="5syou_1_syokyuu_kekka.mp4"></video>
 	</div>
 	</div>
 	</div>
